--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Slider</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="item">
-            <img src="img/1.jpg" alt="">
+    <div class="container">
+
+        <button id="prev" class="btn">prev</button>
+
+        <div class="slider-wrap">
+            <div class="slides">
+                <div class="slide">
+                    <img src="img/1.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="img/2.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="img/3.jpg" alt="">
+                </div>
+            </div>
         </div>
-        <div class="item">
-            <img src="img/2.jpg" alt="">
-        </div>
-        <div class="item">
-            <img src="img/3.jpg" alt="">
-        </div>
+
+        <button id="next" class="btn">next</button>
+
     </div>
+
+    <script src="script.js" ></script>
 </body>
 </html>
